--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todo
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/todo
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+spring.datasource.url=jdbc:mysql://b1v4q5qxu5frjz0flo0q-mysql.services.clever-cloud.com:3306/b1v4q5qxu5frjz0flo0q
+spring.datasource.username=up1fuxpfvmvqdjy4
+spring.datasource.password=Fdbm8ubXLWsQnux0ugUZ
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
